--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,35 @@
 {
-    "name": "druunkman/apidocmaker",
-    "description": "api doc generator",
-    "keywords": ["apidoc" ],
-    "homepage": "https://github.com/druunkman/apidocmaker",
-    "authors": [
-        {
-            "name": "druunkman",
-            "homepage": "https://xcdwgqwegqwegqewdewfefwefwefwefwegq4gq3434g3q.com"
-        }
-    ],
-    "license" : "MIT",
-    "require": {
-        "illuminate/support": "^5.6",
-        },
-    "require-dev": {
-      },
-    "autoload": {
-        "psr-0": {
-            "Druunkman\\Apidockmaker": "src/"
-        }
-    },
-    "autoload-dev": {
-        "classmap": [
+	"name": "druunkman/apidocmaker",
+	"description": "api doc generator",
+	"keywords": ["apidoc"],
+	"homepage": "https://github.com/druunkman/apidocmaker",
+	"authors": [{
+		"name": "druunkman",
+		"homepage": "https://xcdwgqwegqwegqewdewfefwefwefwefwegq4gq3434g3q.com"
+	}],
+	"license": "MIT",
+	"require": {
+		"illuminate/support": "^5.6"
+	},
+	"require-dev": {},
+	"autoload": {
+		"psr-0": {
+			"Druunkman\\Apidockmaker": "src/"
+		}
+	},
+	"autoload-dev": {
+		"classmap": [
 
-        ]
-    },
-    "suggest": {
+		]
+	},
+	"suggest": {
 
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Druunkman\\Apidockmaker\\ApiDocumentServiceProvider"
-             ]
-        }
-    }
+	},
+	"extra": {
+		"laravel": {
+			"providers": [
+				"Druunkman\\Apidockmaker\\ApiDocumentServiceProvider"
+			]
+		}
+	}
 }
